--- a/src/budgetgui/TransactionsFrame.form
+++ b/src/budgetgui/TransactionsFrame.form
@@ -47,7 +47,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="0" pref="5" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="2" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
@@ -75,10 +75,11 @@
                           <Component id="addTransactionButton" max="32767" attributes="0"/>
                           <Component id="removeTransactionButton" max="32767" attributes="0"/>
                           <Component id="addTransactionIncomeButton" alignment="0" max="32767" attributes="0"/>
-                          <Component id="removeTransactionIncomeButton" alignment="0" pref="204" max="32767" attributes="0"/>
+                          <Component id="removeTransactionIncomeButton" alignment="0" pref="207" max="32767" attributes="0"/>
                           <Component id="editDetailsSpendingButton" alignment="0" max="32767" attributes="0"/>
                           <Component id="editDetailsIncomeButton" alignment="0" max="32767" attributes="0"/>
                           <Component id="makeRecurringButton" alignment="0" max="32767" attributes="0"/>
+                          <Component id="viewBudgetsButton" alignment="1" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -87,17 +88,10 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="cashFlowLabel" min="-2" pref="535" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="viewBudgetsButton" max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="percentageIncomeSavedLabel" min="-2" pref="535" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="cashFlowLabel" min="-2" pref="535" max="-2" attributes="0"/>
+                  <Component id="percentageIncomeSavedLabel" alignment="0" min="-2" pref="535" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -109,8 +103,11 @@
                   <Component id="nextMonthButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="prevMonthButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="12" max="32767" attributes="0"/>
-              <Component id="monthLabel" min="-2" pref="32" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="monthLabel" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="viewBudgetsButton" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" pref="27" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
@@ -144,21 +141,16 @@
                       <Component id="editDetailsIncomeButton" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="numTransactionsIncomeLabel" min="-2" pref="37" max="-2" attributes="0"/>
                   <Component id="totalIncomeLabel" min="-2" pref="34" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="cashFlowLabel" min="-2" pref="42" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="viewBudgetsButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="cashFlowLabel" min="-2" pref="42" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="percentageIncomeSavedLabel" min="-2" pref="48" max="-2" attributes="0"/>
-                  </Group>
-              </Group>
-              <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
+              <Component id="percentageIncomeSavedLabel" min="-2" pref="35" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
